--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^11.16.3",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.469.0",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-intersection-observer": "^9.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
